proyecto encriptador finalizado

--- a/encriptador-2.html
+++ b/encriptador-2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header> 
-        <img class="logo" src="C:\Users\jquic\Downloads\logo.png" alt="logo de alura">
+        <img class="logo" src="C:.\Users\jquic\Downloads\logo.png" alt="logo de alura">
     </header> 
     <h1>Por favor, ingrese solo letras minúsculas sin acentos ni caracteres especiales</h1>
     
