corrigiendo error del logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <textarea id="outputTexto" readonly placeholder="Resultado"></textarea>
         <button id="copiar">Copiar</button>
     </div>
-    <script src="C:\Users\jquic\OneDrive\Documentos\programa encriptador\script.js"></script>
+    <script src="C:\Users\jquic\Downloads\programa encriptador\script.js"></script>
 </body>
 </html>
 
