--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header> 
-        <img class="logo" src="C:.\Users\jquic\Downloads\logo.png" alt="logo de alura">
+        <img class="logo" src="logo.png" alt="logo de alura">
     </header> 
     <h1>Por favor, ingrese solo letras minúsculas sin acentos ni caracteres especiales</h1>
     
@@ -21,7 +21,7 @@
         <textarea id="outputTexto" readonly placeholder="Resultado"></textarea>
         <button id="copiar">Copiar</button>
     </div>
-    <script src="C:\Users\jquic\Downloads\programa encriptador\script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
